--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,14 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "django-restframework>=0.0.1",
+]
+
+[dependency-groups]
+dev = [
+    "black>=25.1.0",
+    "drf-spectacular>=0.28.0",
+    "drf-yasg>=1.21.10",
+    "isort>=6.0.1",
+]
