--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "django-restframework>=0.0.1",
+    "djangorestframework>=0.0.1",
 ]
 
 [dependency-groups]
