--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -9,21 +9,21 @@ jobs:
   ci:
     runs-on: ubuntu-latest
 
-    services:
-      db:
-        image: mysql:8.0
-        ports:
-          - 3306:3306
-        env:
-          MYSQL_ROOT_PASSWORD: ${{ secrets.DB_PASSWORD }}
-          MYSQL_DATABASE: django_mini
-          MYSQL_USER: root
-          MYSQL_PASSWORD: ${{ secrets.DB_PASSWORD }}
-        options: >-
-          --health-cmd="mysqladmin ping -h localhost -uroot --silent"
-          --health-interval=10s
-          --health-timeout=5s
-          --health-retries=5
+#    services:
+#      db:
+#        image: mysql:8.0
+#        ports:
+#          - 3306:3306
+#        env:
+#          MYSQL_ROOT_PASSWORD: ${{ secrets.DB_PASSWORD }}
+#          MYSQL_DATABASE: django_mini
+#          MYSQL_USER: root
+#          MYSQL_PASSWORD: ${{ secrets.DB_PASSWORD }}
+#        options: >-
+#          --health-cmd="mysqladmin ping -h localhost -u root --silent"
+#          --health-interval=10s
+#          --health-timeout=5s
+#          --health-retries=5
 
     steps:
       - name: Checkout code
@@ -54,7 +54,7 @@ jobs:
 
       - name: Wait for MySQL to be ready
         run: |
-          until mysqladmin ping -h localhost -uroot --silent; do
+          until mysqladmin ping -h localhost -u root --silent; do
             sleep 1
           done
 
@@ -62,7 +62,7 @@ jobs:
         env:
           DB_NAME: django_mini
           DB_USER: root
-          DB_PASSWORD: "1234"
+          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
           DB_HOST: 127.0.0.1
           DB_PORT: 3306
           DJANGO_SETTINGS_MODULE: project_name.settings
