--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -71,7 +71,7 @@ jobs:
           DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
           DB_HOST: 127.0.0.1
           DB_PORT: 3306
-          DJANGO_SETTINGS_MODULE: account_book.settings
+          DJANGO_SETTINGS_MODULE: config.settings
         run: |
           uv run python manage.py makemigrations
           uv run python manage.py migrate
