--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "cryptography>=45.0.3",
     "djangorestframework>=0.0.1",
+    "djangorestframework-simplejwt>=5.5.0",
 ]
 
 [dependency-groups]
