--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,11 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "black>=25.1.0",
     "cryptography>=45.0.3",
     "djangorestframework>=0.0.1",
     "djangorestframework-simplejwt>=5.5.0",
+    "isort>=6.0.1",
 ]
 
 [dependency-groups]
