--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "django-celery-results>=2.6.0",
     "djangorestframework>=0.0.1",
     "djangorestframework-simplejwt>=5.5.0",
+    "google-genai>=1.20.0",
     "isort>=6.0.1",
     "matplotlib>=3.10.3",
     "pandas>=2.3.0",
